# elu_ws

yolomech/: CMakeLists.txt  package.xml  requirements.txt
yolomech/include/: template_alignment.h
yolomech/src/: shoot_template.cpp  template_alignment.cpp
yolomech/src/scripts/: cpt_dtc_convert.py  yolomech.py
yolomech/template_pcd/: Mech_mind_20_20ms.pcd  Mech_mind_20_20ms_cut.pcd  template_list.txt
